# crazy-7s

./: Cargo.toml  LICENSE  README.md
assets/shaders/: background.wgsl
src/: button.rs  card.rs  deck.rs  info.rs  main.rs  network.rs
src/game_ui/: board.rs  hand.rs  mod.rs  opponent.rs
src/menu/: join.rs  lobby.rs  main.rs  mod.rs  settings.rs
src/screens/: mod.rs  wild.rs  win.rs
src/storage/: mod.rs  native.rs  serialize.rs  wasm.rs
