[package]
name = "crazy-7s"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.0"
bevy_framepace = "0.14.1"
bevy_matchbox = "0.8"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.66", default-features = false, features = ["Storage", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "5.0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
